Fix broken style

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
-* {
+body {
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
 }
 
-body {
-    font-family: 'Roboto', sans-serif;
-}
 
 /* Header styles*/
 .header {
@@ -124,7 +122,7 @@ body {
 }
 
 .bigcard {
-  width: 175px;
+  width: 240px;
   height: 240px;
   display: flex;
   flex-direction: column;
